# Marsel

./: pyproject.toml  requirements.txt
.github/workflows/: publish.yml  unittest.yml
marsel/: __init__.py
tests/: test_marsel.py
