[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marsel"
version = "0.0.1"
description = "A lightweight utility library"
authors = [{ name = "Shaxzodbek" }]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "passlib[bcrypt]>=1.7.4"
]

[project.urls]
Homepage = "https://github.com/shaxzodbek16/marsel"