[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marsel"
version = "0.0.1"
description = "A lightweight utility library"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Shaxzodbek", email = "muxtorovshaxzodbek16@gmail.com"}
]
keywords = ["utility", "library", "helpers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/shaxzodbek16/marsel"
Repository = "https://github.com/shaxzodbek16/marsel"
"Bug Tracker" = "https://github.com/shaxzodbek16/marsel/issues"

[tool.setuptools]
packages = ["marsel", "marsel.utils"]

[tool.setuptools.package-data]
marsel = ["py.typed"]